<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- top Layer -->

    <LinearLayout
        android:id="@+id/ToptitleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MiddleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@drawable/detailview_bg"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/MiddleLeftSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" > <!-- weight중첩 사용으로 퍼포먼스가 떨어진다는 경고!! -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MiddleCenterSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_ProductRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Settings_ProductRegistration"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_ChangePW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Settings_ChangePW"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_TransferSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Settings_TransferSettings"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MiddleRightSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>